# stdutils

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  ThirdPartyNotices.txt  appveyor.yml  azure-pipelines.yml
.github/workflows/: cmake.yml
cmake/: StdutilsConfig.cmake.in
include/stdutils/: arguments.h  assert.h  format.h  stdutils.h  stream.h  string.h
pipelines/: jobs-linux.yml  jobs-macos.yml  jobs-windows.yml
tests/: CMakeLists.txt  test_assert.cpp  test_format.cpp  test_stream.cpp  test_stream.inp  test_string.cpp
